--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,127 @@
-.App {
-  text-align: center;
+.app {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #fff;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.left2 {
+    flex: 1;
+    font-size: 100px;
+    font-weight: 900;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.center2 {
+    flex: 1;
+}
+.right2 {
+    flex: 1;
+    font-size: 100px;
+    font-weight: 900;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.left {
+    flex: 1;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.div {
+    display: flex;
 }
 
-.App-link {
-  color: #61dafb;
+
+.center {
+    flex: 6;
+}
+.center h1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 60px;
+    font-weight: 600;
+    font-family: cursive;
+    color: coral;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.error {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: red;
+    font-weight: 900;
+    font-family: cursive;
+}
+
+.input1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.input {
+    padding: 15px 25px;
+    font-size: 18px;
+    border-radius: 15px;
+    border: 1px solid gray;
+    outline: none;
+}
+
+.center h3 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 50px;
+    font-weight: 600;
+    font-family: cursive;
+    color: cornflowerblue;
+}
+
+.right {
+    flex: 1;
+}
+
+.button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.btn {
+    padding: 15px 25px;
+    background-color: #666;
+    border: none;
+    outline: none;
+    color: #fff;
+    box-shadow: 5px 10px 15px gray;
+    border-radius: 15px;
+    cursor: pointer;
+}
+
+.text {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 36px;
+    font-weight: 600;
+    font-family: cursive;
+    color: #333;
+}
+
+.btn:hover {
+    box-shadow: 10px 15px 25px gray;
+}
+.btn:active {
+    box-shadow: none;
+}
+
+.confetti {
+    display: block;
+}
+
+.confetti-hidden {
+    display: none;
 }
