--- a/src/App.css
+++ b/src/App.css
@@ -56,6 +56,15 @@
     font-family: cursive;
 }
 
+.typing {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: rgb(15, 236, 15);
+    font-weight: 900;
+    font-family: cursive;
+}
+
 .input1 {
     display: flex;
     justify-content: center;
@@ -105,6 +114,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
     font-size: 36px;
     font-weight: 600;
     font-family: cursive;
@@ -125,3 +135,18 @@
 .confetti-hidden {
     display: none;
 }
+
+/* @media screen and (max-width: 900px) {
+    .app {
+        display: inline-block;
+        width: 900px;
+    }
+
+    .left {
+        display: none;
+    }
+
+    .right {
+        display: none;
+    }
+} */
