--- a/src/App.css
+++ b/src/App.css
@@ -41,6 +41,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
     font-size: 60px;
     font-weight: 600;
     font-family: cursive;
